<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.educationalquiz.MainActivity"
    android:fillViewport="true"
    android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:src="@drawable/image"
        android:scaleType="centerCrop"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_question"
            android:layout_margin="12dp"
            android:id="@+id/name"
            android:inputType="text"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_number_1"
            style="@style/quiz_number"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz1"
            style="@style/quiz"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/view">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5"
                android:id="@+id/thirdRadioButton"/>
        </RadioGroup>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/view"
            android:id="@+id/quiz1state"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_number_2"
            style="@style/quiz_number"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/quiz"
            android:text="@string/quiz3"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ramadan"
                android:id="@+id/ramadan"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Safer" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Muharram" />
        </RadioGroup>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/view"
            android:id="@+id/quiz3state"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_number_3"
            style="@style/quiz_number"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz4"
            style="@style/quiz"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/view">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5"
                android:id="@+id/thirdRadioButtonMath"/>
        </RadioGroup>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/view"
            android:id="@+id/quiz1Mathstate"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_number_4"
            style="@style/quiz_number"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz5"
            style="@style/quiz"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="13"
            android:id="@+id/firstBoxMath"
            style="@style/view"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="14"
            android:id="@+id/secondBoxMath"
            style="@style/view"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="15"
            android:id="@+id/thirdBoxMath"
            style="@style/view"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10"
            android:id="@+id/fourthBoxMath"
            style="@style/view"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/view"
            android:id="@+id/quiz2Mathstate"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_number_5"
            style="@style/quiz_number"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/quiz"
                android:text="@string/quiz"/>
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/cat"
                style="@style/image"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                style="@style/view"
                android:id="@+id/catEditText"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/view"
                android:id="@+id/catText"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/quiz_number"
                android:text="@string/quiz_number_6"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/quiz"
                android:text="@string/quiz"/>
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                style="@style/image"
                android:src="@drawable/cow"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                style="@style/view"
                android:id="@+id/cowEditText"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/view"
                android:id="@+id/cowText"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/quiz_number"
                android:text="@string/quiz_number_7"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/quiz"
                android:text="@string/quiz"/>
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                style="@style/image"
                android:src="@drawable/rabbit"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                style="@style/view"
                android:id="@+id/rabbitEditText"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/view"
                android:id="@+id/rabbitText"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/quiz_number"
                android:text="@string/quiz_number_8"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/quiz"
                android:text="@string/quiz"/>
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                style="@style/image"
                android:src="@drawable/lion"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                style="@style/view"
                android:id="@+id/lionEditText"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/view"
                android:id="@+id/lionText"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/quiz_number"
                android:text="@string/quiz_number_9"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/quiz"
                android:text="@string/quiz"/>
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                style="@style/image"
                android:src="@drawable/sheep"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                style="@style/view"
                android:id="@+id/sheepEditText"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/view"
                android:id="@+id/sheepText"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/quiz_number"
                android:text="@string/quiz_number_10"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/quiz"
                android:text="@string/quiz"/>
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                style="@style/image"
                android:src="@drawable/duck"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                style="@style/view"
                android:id="@+id/duckEditText"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/view"
                android:id="@+id/duckText"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkQuiz"
            android:onClick="checkQuiz"
            android:background="@color/Yellow"
            style="@style/Button"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Button"
            android:onClick="SendData"
            android:background="@color/colorPrimary"
            android:text="@string/send"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
